# Beziers

./: .gitignore  BezierCurves.sln  BezierCurves.vcxproj  BezierCurves.vcxproj.filters  CMakeLists.txt  compile_commands.json  fps
src/: Constants.h  HelperFunctions.cpp  HelperFunctions.h  InputHandler.cpp  InputHandler.h  Scene.cpp  Scene.h  SplineGenerator.cpp  SplineGenerator.h  ThicknessLine.cpp  ThicknessLine.h  Timer.cpp  Timer.h  main.cpp  sfLine.cpp  sfLine.h
src/Bezier/: BezierCurve.cpp  BezierCurve.h  MovingBezierSpline.cpp  MovingBezierSpline.h  MovingPoint.cpp  MovingPoint.h
